--- a/README.org
+++ b/README.org
@@ -52,6 +52,8 @@ rights to the work you contribute.
 - [[http://common-lisp.net/project/cffi/manual/html_node/index.html][CFFI User Manual]]
 
 ** Change Log
+*** 3.1.1
+- Export =webkit-web-view-execute-editing-command= properly.
 *** 3.1.0
 Additions:
 - =webkit-web-view-send-message-to-page*= to send =WebKitUserMesssages= in
