--- a/README.org
+++ b/README.org
@@ -52,6 +52,10 @@ rights to the work you contribute.
 - [[http://common-lisp.net/project/cffi/manual/html_node/index.html][CFFI User Manual]]
 
 ** Change Log
+*** 3.5.1
+- Add support for libwebkit2gtk-5.0.
+- Add advanced editing commands with =webkit-web-view-execute-editing-command-with-arguments= as the way to execute those.
+- Bugfixes in custom schemes and color chooser requests.
 *** 3.5.0
 - Add webkit-web-view-set-cors-allowlist, a binding for a recently (2.34.1) introduced =webkit_web_view_set_cors_allowlist=.
 - Bug Fix: Catch any condition in C callbacks to avoid crashing the whole Lisp process due to unhandled conditions.
