--- a/README.org
+++ b/README.org
@@ -52,6 +52,8 @@ rights to the work you contribute.
 - [[http://common-lisp.net/project/cffi/manual/html_node/index.html][CFFI User Manual]]
 
 ** Change Log
+*** 3.5.3
+- Fix typing for context menu item-related functions.
 *** 3.5.2
 - Fix string processing for custom URLs -- no longer segfaulting on long strings.
 *** 3.5.1
