--- a/README.org
+++ b/README.org
@@ -52,6 +52,9 @@ rights to the work you contribute.
 - [[http://common-lisp.net/project/cffi/manual/html_node/index.html][CFFI User Manual]]
 
 ** Change Log
+*** 3.5.5
+- Add SoapMessageHeaders bindings.
+- Use them everywhere, in custom scheme processing too.
 *** 3.5.4
 - Add WebKitWebResource bindings.
 - Add WebKitUriSchemeResponse bindings and use them in scheme callbacks by default.
